--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Jubeat Clone</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="resize-btn">Change Grid Size</button>
+    <div class="header">
+        <h1>Jubeat JS</h1>
+        <div id="score-display">Score: 0</div>
+    </div>
+    
     <div id="container"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
