--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Jubeat Clone</title>
+    <title>Jubeat Tablet Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        <h1>Jubeat JS</h1>
+        <h1>Jubeat Touch</h1>
         <div id="score-display">Score: 0</div>
     </div>
     
